Fix image overlapping

--- a/assets/sass/components/_badges.sass
+++ b/assets/sass/components/_badges.sass
@@ -1,4 +1,7 @@
 .badges
+    img
+        max-width: 100%
+
     > a
         display: block
         margin: 0 0 10px
